Constrain svg position

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -216,7 +216,7 @@ header[role="banner"] {
     flex-direction: column;
   }
 
-  .gu-content__main .svg-contributions-bg-desktop {
+  .gu-content__bg .svg-contributions-bg-desktop {
     display: none;
   }
 
