--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -324,151 +324,152 @@ header[role="banner"] {
   }
 }
 
-// @supports(display: grid) {
-//   .gu-content {
-//     display: grid;
-//     grid-template-rows: [header-t] 75px [header-b] 1fr [footer-t] auto [footer-b];
-//     grid-template-columns: 1fr;
-//   }
+@supports(display: grid) {
+  .gu-content {
+    display: grid;
+    grid-template-rows: [header-t] 75px [header-b] 1fr [footer-t] auto [footer-b];
+    grid-template-columns: 1fr;
+  }
   
-//   header[role="banner"] {
-//     height: auto;
-//     grid-row: header-t / header-b;
-//   }
+  header[role="banner"] {
+    height: auto;
+    grid-row: header-t / header-b;
+  }
   
-//   footer[role="contentinfo"] {
-//     grid-row: footer-t / footer-b;
-//   }
+  footer[role="contentinfo"] {
+    grid-row: footer-t / footer-b;
+  }
   
-//   .gu-content__main {
-//     grid-row: header-b / footer-t;  
-//   }
+  .gu-content__main {
+    grid-row: header-b / footer-t;  
+  }
 
-//   header[role="banner"],
-//   footer[role="contentinfo"],
-//   .gu-content__main {
-//     display: grid;
-//   }
+  header[role="banner"],
+  footer[role="contentinfo"],
+  .gu-content__main {
+    display: grid;
+  }
 
-//   .gu-content__bg {
-//     position: static;
-//   }
+  .gu-content__bg {
+    position: static;
+  }
 
-//   @include mq($from: tablet) {
-//     .gu-content,
-//     header[role="banner"] {
-//       padding: 0;
-//       width: auto;
-//     }
+  @include mq($from: tablet) {
+    .gu-content,
+    header[role="banner"] {
+      padding: 0;
+      width: auto;
+    }
 
-//     footer[role="contentinfo"] {
-//       padding: 0 0 ($gu-v-spacing * 2);
-//       width: auto;
-//     }
+    footer[role="contentinfo"] {
+      padding: 0 0 ($gu-v-spacing * 2);
+      width: auto;
+    }
     
-//     .gu-content__main,
-//     footer[role="contentinfo"] {
-//       grid-column-gap: $gu-h-spacing;
-//       grid-template-columns: 1fr repeat(8, 70px) 1fr;  
-//     }
+    .gu-content__main,
+    footer[role="contentinfo"] {
+      grid-column-gap: $gu-h-spacing;
+      grid-template-columns: 1fr repeat(8, 70px) 1fr;  
+    }
     
-//     header[role="banner"],
-//     footer[role="contentinfo"] {
-//       display: grid;
-//       grid-column: span 10;
-//     }
+    header[role="banner"],
+    footer[role="contentinfo"] {
+      display: grid;
+      grid-column: span 10;
+    }
 
-//     .glogo {
-//       grid-column: 9;
-//     }
+    .glogo {
+      grid-column: 9;
+    }
 
-//     .countryGroups {
-//       grid-column: 2 / 8;
-//       grid-row: 1;
-//     }
+    .countryGroups {
+      grid-column: 2 / 8;
+      grid-row: 1;
+    }
 
-//     .gu-content__content {
-//       margin: 0 -11px;
-//       grid-row: 1;
-//       grid-column: 2 / 6;
-//     }
+    .gu-content__content {
+      margin: 0 -11px;
+      grid-row: 1;
+      grid-column: 2 / 6;
+    }
 
-//     .component-footer__content {
-//       grid-column: 2 / 9;
-//     }
+    .component-footer__content {
+      grid-column: 2 / 9;
+    }
 
-//     .gu-content__bg {
-//       align-items: flex-end;
-//       display: flex;
-//       grid-column: 1 / 11;
-//       grid-row: 1;
-//       justify-content: center;
-//     }
-//   }
+    .gu-content__bg {
+      align-items: flex-end;
+      display: flex;
+      grid-column: 1 / 11;
+      grid-row: 1;
+      justify-content: center;
+    }
+  }
 
-//   @include mq($from: leftCol) {
-//     .gu-content__main,
-//     header[role="banner"],
-//     footer[role="contentinfo"] {
-//       grid-column-gap: $gu-h-spacing;
-//       grid-template-columns: 1fr repeat(14, 60px) 1fr;  
-//       width: auto;
-//     }
+  @include mq($from: leftCol) {
+    .gu-content__main,
+    header[role="banner"],
+    footer[role="contentinfo"] {
+      grid-column-gap: $gu-h-spacing;
+      grid-template-columns: 1fr repeat(14, 60px) 1fr;  
+      width: auto;
+    }
+
+    header[role="banner"],
+    footer[role="contentinfo"] {
+      grid-column: span 16;
+    }
     
-//     header[role="banner"],
-//     footer[role="contentinfo"] {
-//       grid-column: span 16;
-//     }
+    .glogo {
+      grid-column: 14;
+      justify-self: flex-end;
+    }
 
-//     .glogo {
-//       grid-column: 14;
-//       justify-self: flex-end;
-//     }
+    .gu-content__content {
+      width: auto;
+      grid-column: 4 / 8;
+    }
 
-//     .gu-content__content {
-//       width: auto;
-//       grid-column: 4 / 8;
-//     }
+    .component-footer__content {
+      grid-column: 2 / 11;
+    }
 
-//     .component-footer__content {
-//       grid-column: 2 / 11;
-//     }
+    .gu-content__bg {
+      grid-column: 1 / 17;
+    }
+  }  
 
-//     .gu-content__bg {
-//       grid-column: 1 / 17;
-//     }
-//   }  
+  @include mq($from: wide) {
+    .gu-content__main,
+    header[role="banner"],
+    footer[role="contentinfo"] {
+      grid-column-gap: $gu-h-spacing;
+      grid-template-columns: 1fr repeat(16, 60px) 1fr;  
+    }  
 
-//   @include mq($from: wide) {
-//     .gu-content__main,
-//     header[role="banner"],
-//     footer[role="contentinfo"] {
-//       grid-column-gap: $gu-h-spacing;
-//       grid-template-columns: 1fr repeat(16, 60px) 1fr;  
-//     }  
+    .glogo {
+      grid-column: 16;
+    }
 
-//     .glogo {
-//       grid-column: 16;
-//     }
+    header[role="banner"],
+    footer[role="contentinfo"] {
+        grid-column: span 18;
+    }
 
-//     header[role="banner"],
-//     footer[role="contentinfo"] {
-//         grid-column: span 18;
-//     }
+    .gu-content__content {
+      grid-column: 5 / 9;
+    }
 
-//     .gu-content__content {
-//       grid-column: 5 / 9;
-//     }
+    .component-footer__content {
+      grid-column: 2 / 12;
+    }
 
-//     .component-footer__content {
-//       grid-column: 2 / 12;
-//     }
+    .gu-content__bg {
+      grid-column: 1 / 19;
+    }
+  }
+}
 
-//     .gu-content__bg {
-//       grid-column: 1 / 19;
-//     }
-//   }
-// }
 /*= CONTENT */
 .content {
   background: gu-colour(garnett-neutral-5);
