--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -140,6 +140,8 @@
     margin-top: $gu-v-spacing;
     height: 42px;
     width: 100%;
+    box-sizing: border-box;
+    padding: 0 $gu-h-spacing;
     @include mq($from: desktop) {
       width: 304px;
     }
@@ -149,7 +151,6 @@
     margin-top: $gu-v-spacing * 2;
     height: 42px;
     display: inline-block;
-
     .svg-arrow-left-straight {
       position: absolute;
       left: $gu-v-spacing;
