--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -148,7 +148,7 @@
   }
 
   .component-cta-link--back {
-    margin-top: $gu-v-spacing * 2;
+    margin-top: $gu-v-spacing;
     height: 42px;
     display: inline-block;
     .svg-arrow-left-straight {
