--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -148,10 +148,14 @@
   }
 
   .component-cta-link--back {
+    background-color: transparent;
     margin-top: $gu-v-spacing;
     height: 42px;
+    color: gu-colour(garnett-neutral-1);
+    border: 1px solid gu-colour(garnett-neutral-1);
     display: inline-block;
     .svg-arrow-left-straight {
+      fill: gu-colour(garnett-neutral-1);
       position: absolute;
       left: $gu-v-spacing;
     }
