make suggested edits

--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -152,7 +152,7 @@
     margin-top: $gu-v-spacing;
     height: 42px;
     color: gu-colour(garnett-neutral-1);
-    border: 1px solid gu-colour(garnett-neutral-1);
+    border: 1px solid gu-colour(neutral-4);
     display: inline-block;
     .svg-arrow-left-straight {
       fill: gu-colour(garnett-neutral-1);
