--- a/app/views/recurringContributions.scala.html
+++ b/app/views/recurringContributions.scala.html
@@ -4,7 +4,7 @@
 @import helper.CSRF
 
 @import com.gu.i18n.Currency.AUD
-@import switchboard.Switches
+@import admin.Settings
 @(
   title: String,
   id: String,
@@ -15,7 +15,7 @@
   defaultStripeConfig: StripeConfig,
   uatStripeConfig: StripeConfig,
   payPalConfig: PayPalConfig
-)(implicit assets: AssetsResolver, requestHeader: RequestHeader, switches: Switches)
+)(implicit assets: AssetsResolver, requestHeader: RequestHeader, settings: Settings)
 
 @scripts = {
     <script type="text/javascript">
