--- a/app/views/newContributions.scala.html
+++ b/app/views/newContributions.scala.html
@@ -3,7 +3,7 @@
 @import com.gu.support.config._
 @import helper.CSRF
 @import com.gu.i18n.Currency.AUD
-@import switchboard.Switches
+@import admin.Settings
 @(
   title: String,
   id: String,
@@ -14,7 +14,7 @@
   paymentApiStripeEndpoint: String,
   paymentApiPayPalEndpoint: String,
   idUser: Option[IdUser],
-)(implicit assets: AssetsResolver, request: RequestHeader, switches: Switches)
+)(implicit assets: AssetsResolver, request: RequestHeader, settings: Settings)
 
 @scripts = {
   <script type="text/javascript">
