--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -23,7 +23,7 @@
 		<meta property="og:description" content="@description" />
 	}
 
-	@(settings)
+	@settingsScript(settings)
 
 	<title>@title</title>
 	<meta property="og:title" content="@title"/>
