improve payment buttons

--- a/assets/components/paymentButtons/stripePopUpButton/stripePopUpButton.scss
+++ b/assets/components/paymentButtons/stripePopUpButton/stripePopUpButton.scss
@@ -6,12 +6,20 @@
   cursor: pointer;
   display: block;
   font-family: $gu-sans-web;
-  font-size: 14px;
+  font-size: 16px;
   height: $cta-height;
   padding-left: $gu-h-spacing;
   position: relative;
   text-align: left;
   width: 100%;
+
+
+  .svg-arrow-right-straight {
+    height: 16px;
+    position: absolute;
+    left: calc(100% - 34px);
+    fill: gu-colour(garnett-neutral-1);
+  }
 
   .svg-credit-card {
     width: 24px;
