Add "payment method" above buttons

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -654,6 +654,10 @@ form {
   margin-left: 5px;
 }
 
+.form__radio-group--contribution-pay .form__legend {
+  font-weight: bold;
+}
+
 .form__label {
   font-weight: bold;
   line-height: 1;
