--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -124,6 +124,7 @@ footer[role="contentinfo"] {
   background: gu-colour(media-garnett-main-1);
   color: gu-colour(garnett-neutral-2);
   padding-bottom: $gu-v-spacing * 2;
+  font-size: 12px;
 }
 
 footer[role="contentinfo"] a {
