--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -3,8 +3,20 @@
 @import '~stylesheets/gu-sass/gu-sass';
 
 body {
-  background: gu-colour(news-garnett-highlight);
   min-height: 100vh;
+}
+
+.gu-content {
+  position: relative;
+  z-index: 0;
+}
+
+.gu-content--contribution-form {
+  background: #f1f8fc;
+}
+
+.gu-content--contribution-thankyou {
+  background: gu-colour(news-garnett-highlight);
 }
 
 .gu-content__main {
