Add new payment failure error design

--- a/assets/components/contributionsCheckout/contributionsCheckout.scss
+++ b/assets/components/contributionsCheckout/contributionsCheckout.scss
@@ -37,8 +37,8 @@
     margin-bottom: $gu-v-spacing * 2;
   }
 
-  .component-error-message {
-    height: 40px;
+  .component-payment-failure-message {
+    height: 108px;
     position: relative;
 
     @include mq($from: desktop) {
