--- a/assets/components/directDebit/directDebitForm/directDebitForm.scss
+++ b/assets/components/directDebit/directDebitForm/directDebitForm.scss
@@ -20,10 +20,19 @@
     margin-right: 8px;
   }
 
+  .svg-exclamation-alternate__circle {
+    fill: none;
+    stroke: gu-colour(error);
+  }
+
+  .svg-exclamation-alternate__exclamation-mark {
+    fill: gu-colour(error)
+  }
+
   .component-error-message__message {
     position: relative;
     left: 1px;
-    top: 3px;
+    top: 4px;
   }
 }
 
