--- a/assets/pages/oneoff-contributions/oneoffContributions.scss
+++ b/assets/pages/oneoff-contributions/oneoffContributions.scss
@@ -20,6 +20,7 @@
 @import '~components/pageSection/pageSection';
 @import '~components/paymentAmount/paymentAmount';
 @import '~components/paymentButtons/stripePopUpButton/stripePopUpButton';
+@import '~components/paymentFailureMessage/paymentFailureMessage';
 @import '~components/progressMessage/progressMessage';
 @import '~components/questionsContact/questionsContact';
 @import '~components/secure/secure';
