--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -23,6 +23,7 @@
 @import '~components/paymentButtons/directDebitPopUpButton/directDebitPopUpButton';
 @import '~components/paymentButtons/payPalExpressButton/payPalExpressButton';
 @import '~components/paymentButtons/stripePopUpButton/stripePopUpButton';
+@import '~components/paymentFailureMessage/paymentFailureMessage';
 @import '~components/progressMessage/progressMessage';
 @import '~components/questionsContact/questionsContact';
 @import '~components/secure/secure';
