--- a/assets/stylesheets/gu-sass/colours.scss
+++ b/assets/stylesheets/gu-sass/colours.scss
@@ -13,6 +13,7 @@ $gu-colours: (
 	guardian-brand-dark:    #00456e,
 
 	error:                  #d61d00,
+    payment-failure-error:  #fff4f2,
 	success:                #4a7801,
 
 	// Neutral palette
@@ -95,6 +96,7 @@ $gu-colours: (
   garnett-neutral-6: #767676,
   garnett-neutral-7: #444444,
 
+  news-main: #c70000,
   news-garnett-main-1: #e00000, //used for kicker
   news-garnett-feature: #ad0006, //used for feature head
   news-garnett-media-main-1: #ff4e36, // used for kicker on media
