Update digital pack copy for the september campaign. TODO: h1 css issues.

--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -275,7 +275,7 @@
       width: 320px;
     }
 
-    @include mq($from: mobileMedium, $until: tablet) {
+    @include mq($from: mobileMedium, $until: leftCol) {
       width: 330px;
     }
 
@@ -286,11 +286,17 @@
     }
 
     @include mq($from: leftCol) {
-      width: 490px;
-      margin-left: 12px;
-      font-size: 36px;
-      line-height: 42px;
+      width: 500px;
+      font-size: 32px;
+      line-height: 36px;
     }
+
+    //@include mq($from: leftCol) {
+    //  width: 490px;
+    //  margin-left: 12px;
+    //  font-size: 36px;
+    //  line-height: 42px;
+    //}
   }
 
   .component-left-margin-section--header-block {
