Add waiting state

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -1,6 +1,7 @@
 // -----  gu-sass ----- //
 
 @import '~stylesheets/gu-sass/gu-sass';
+@import '~components/progressMessage/progressMessage';
 
 body {
   min-height: 100vh;
