Add animated dots

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -2,6 +2,7 @@
 
 @import '~stylesheets/gu-sass/gu-sass';
 @import '~components/progressMessage/progressMessage';
+@import '~components/spinners/animatedDots';
 
 body {
   min-height: 100vh;
