--- a/app/views/newContributions.scala.html
+++ b/app/views/newContributions.scala.html
@@ -3,7 +3,7 @@
 @import com.gu.support.config._
 @import helper.CSRF
 @import com.gu.i18n.Currency.AUD
-@import admin.Settings
+@import admin.AdminSettings
 @(
   title: String,
   id: String,
@@ -16,7 +16,7 @@
   paymentApiStripeEndpoint: String,
   paymentApiPayPalEndpoint: String,
   idUser: Option[IdUser],
-)(implicit assets: AssetsResolver, request: RequestHeader, settings: Settings)
+)(implicit assets: AssetsResolver, request: RequestHeader, settings: AdminSettings)
 
 @scripts = {
   <script type="text/javascript">
