--- a/assets/stylesheets/gu-sass/colours.scss
+++ b/assets/stylesheets/gu-sass/colours.scss
@@ -13,7 +13,6 @@ $gu-colours: (
 	guardian-brand-dark:    #00456e,
 
 	error:                  #d61d00,
-    payment-failure-error:  #fff4f2,
 	success:                #4a7801,
 
 	// Neutral palette
@@ -96,11 +95,11 @@ $gu-colours: (
   garnett-neutral-6: #767676,
   garnett-neutral-7: #444444,
 
-  news-main: #c70000,
   news-garnett-main-1: #e00000, //used for kicker
   news-garnett-feature: #ad0006, //used for feature head
   news-garnett-media-main-1: #ff4e36, // used for kicker on media
   news-garnett-highlight: #ffe500,
+  news-faded:  #fff4f2,
 
   opinion-garnett-main-1: #ed6300,
   opinion-garnett-feature: #f5be2c,
