--- a/app/views/settingsScript.scala.html
+++ b/app/views/settingsScript.scala.html
@@ -1,7 +1,7 @@
-@import admin.AdminSettings
+@import admin.Settings
 @import views.ViewHelpers.printSettings
 
-@(settings: AdminSettings)
+@(settings: Settings)
 
 <script type="text/javascript">
     window.guardian = window.guardian || {};
