--- a/app/views/oneOffContributions.scala.html
+++ b/app/views/oneOffContributions.scala.html
@@ -3,7 +3,7 @@
 @import com.gu.support.config.StripeConfig
 @import helper.CSRF
 @import com.gu.i18n.Currency.AUD
-@import admin.AdminSettings
+@import admin.Settings
 @(
         title: String,
         id: String,
@@ -14,7 +14,7 @@
         paymentApiStripeEndpoint: String,
         paymentApiPayPalEndpoint: String,
         idUser: Option[IdUser]
-)(implicit assets: AssetsResolver, request: RequestHeader, settings: AdminSettings)
+)(implicit assets: AssetsResolver, request: RequestHeader, settings: Settings)
 
 @scripts = {
     <script type="text/javascript">
