--- a/assets/components/directDebit/directDebitForm/directDebitForm.scss
+++ b/assets/components/directDebit/directDebitForm/directDebitForm.scss
@@ -26,7 +26,7 @@
   }
 
   .svg-exclamation-alternate__exclamation-mark {
-    fill: gu-colour(error)
+    fill: gu-colour(error);
   }
 
   .component-error-message__message {
