--- a/assets/components/featureList/featureList.scss
+++ b/assets/components/featureList/featureList.scss
@@ -2,6 +2,9 @@
 	margin: 0;
 	padding: 0;
 	padding-left: 10px;
+
+	display: grid;
+	grid-template-columns: 100px 100px;
 }
 
 .component-feature-list__heading {
@@ -17,4 +20,6 @@
 .component-feature-list__item {
 	margin-bottom: $gu-v-spacing;
 	margin-left: $gu-h-spacing;
+
+	//list-style-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 10 10"><circle cx="5" cy="5" r="5" fill="#ff4e36"/></svg>');
 }
