--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -153,13 +153,20 @@
     line-height: 1.25;
     font-family: $gu-headline;
     list-style-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 10 10"><circle cx="5" cy="5" r="5" fill="#ff4e36"/></svg>');
-    margin-left: 26px;
+   // margin-left: 26px;
+
+    display: grid;
+    grid-template-columns: 1fr;
+
+    //@include mq($from: leftCol) {
+    //  columns: 2;
+    //  column-gap: 54px;
+    //  column-fill: auto;
+    //  height: 175px;
+    //}
 
     @include mq($from: leftCol) {
-      columns: 2;
-      column-gap: 54px;
-      column-fill: auto;
-      height: 175px;
+      grid-template-columns: 1fr 1fr;
     }
   }
 
@@ -171,6 +178,8 @@
 
   .component-feature-list__item {
     margin-bottom: $gu-v-spacing / 2;
+    margin-left: 25px;
+    display:list-item;
   }
 
   .product-block__highlight {
