Add manual fields validation

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -711,7 +711,8 @@ form {
   outline: none;
 }
 
-.form__input--primed:invalid {
+.form__input--primed:invalid,
+.form__input--invalid {
   border-color: #3db540;
 }
 
