Refactored subs section on UK subs page.

--- a/assets/components/threeSubscriptions/threeSubscriptions.scss
+++ b/assets/components/threeSubscriptions/threeSubscriptions.scss
@@ -49,6 +49,11 @@
     }
   }
 
+  .component-subscription-bundle__description {
+    line-height: 20px;
+    margin-bottom: $gu-v-spacing;
+  }
+
   .component-grid-image {
     width: 165px;
     height: 165px;
