--- a/assets/pages/subscriptions-landing/subscriptionsLanding.scss
+++ b/assets/pages/subscriptions-landing/subscriptionsLanding.scss
@@ -22,6 +22,7 @@
 @import '~components/digitalSubscriptions/digitalSubscriptions';
 @import '~components/paperSubscriptions/paperSubscriptions';
 @import '~components/internationalSubscriptions/internationalSubscriptions';
+@import '~components/subscriptionsByCountryGroup/subscriptionsByCountryGroup';
 @import '~components/whySupport/whySupport';
 
 
@@ -29,10 +30,12 @@
 
 #subscriptions-landing-page {
 
-  .component-digital-subscriptions, .component-international-subscriptions {
+  .component-subscriptions-by-country-group {
     @include multiline-top-border;
 
-    border-top: none;
+    .component-three-subscriptions:nth-of-type(1) {
+      border-top: none;
+    }
   }
 
   .component-cta-link--android {
