--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -801,9 +801,15 @@ form {
   height: 10px;
 }
 
+.form__field .svg-pound,
 .form__field .svg-dollar {
-  width: 11px;
-  height: 19px;
+  width: 24px;
+  height: 26px;
+}
+
+.form__field .svg-euro {
+  width: 30px;
+  height: 40px;
 }
 
 .form__field .svg-globe {
