--- a/assets/components/threeSubscriptions/threeSubscriptions.scss
+++ b/assets/components/threeSubscriptions/threeSubscriptions.scss
@@ -52,6 +52,10 @@
   .component-subscription-bundle__description {
     line-height: 20px;
     margin-bottom: $gu-v-spacing;
+
+    @include mq($from: phablet, $until: leftCol) {
+      margin-left: 1.5 * $gu-h-spacing;
+    }
   }
 
   .component-grid-image {
