--- a/assets/components/priceCta/priceCta.scss
+++ b/assets/components/priceCta/priceCta.scss
@@ -1,17 +1,18 @@
 .component-price-cta {
   padding-left: $gu-h-spacing / 2;
-  padding-top: $gu-v-spacing / 2;
-  background-color: gu-colour(news-garnett-highlight);
+  padding-top: $gu-v-spacing;
+  padding-bottom: $gu-v-spacing;
+  background-color: #000;
   position: relative;
-  height: 86px;
+  border-top: white 1px solid;
 
   .component-cta-link {
     width: 165px;
-    background-color: #fff;
+    background-color: gu-colour(news-garnett-highlight);
     color: gu-colour(garnett-neutral-1);
 
     &:hover {
-      background-color: darken(#fff, 5%);
+      background-color: darken(gu-colour(news-garnett-highlight), 5%);
     }
 
     @include mq($from: mobileMedium) {
@@ -87,7 +88,6 @@
 }
 
 .component-price-cta--dark {
-  background-color: gu-colour(media-garnett-main-1);
 
   .component-price-cta__price {
     background-color: gu-colour(news-garnett-highlight);
