--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -258,38 +258,45 @@
   .digital-subscription-landing-header__title {
     position: relative;
     width: 100%;
-    height: 92px;
     background-color: #000000;
   }
 
   .digital-subscription-landing-header__title-copy {
+    display: block;
     color: #ffffff;
     font-family: $gu-headline;
     font-weight: bold;
     margin-left: 10px;
     padding-top: 2px;
-    font-size: 26px;
+    font-size: 24px;
     line-height: 29px;
+    height: 70px;
 
     @include mq($until: mobileMedium) {
-      width: 320px;
+      width: 310px;
     }
 
     @include mq($from: mobileMedium, $until: tablet) {
-      width: 330px;
+      padding-top: 8px;
+      font-size: 28px;
+      line-height: 34px;
+      width: 400px;
+      height: 80px;
     }
 
     @include mq($from: tablet, $until: leftCol) {
-      width: 500px;
-      font-size: 32px;
-      line-height: 36px;
+      width: 550px;
+      font-size: 42px;
+      line-height: 48px;
+      height: 106px;
     }
 
     @include mq($from: leftCol) {
-      width: 490px;
+      width: 570px;
+      font-size: 44px;
+      line-height: 50px;
       margin-left: 12px;
-      font-size: 36px;
-      line-height: 42px;
+      height: 108px;
     }
   }
 
@@ -297,7 +304,7 @@
     .component-grid-picture {
       position: relative;
     }
-    
+
     .component-price-cta__cancel {
       background-color: #f6f6f6;
     }
