--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -153,21 +153,14 @@
     line-height: 1.25;
     font-family: $gu-headline;
     list-style-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 10 10"><circle cx="5" cy="5" r="5" fill="#ff4e36"/></svg>');
-   // margin-left: 26px;
-
-    display: grid;
-    grid-template-columns: 1fr;
-
-    //@include mq($from: leftCol) {
-    //  columns: 2;
-    //  column-gap: 54px;
-    //  column-fill: auto;
-    //  height: 175px;
-    //}
+    margin-left: 26px;
+    display: flex;
+    flex-flow: column wrap;
 
     @include mq($from: leftCol) {
-      grid-template-columns: 1fr 1fr;
+      height: 200px;
     }
+
   }
 
   .component-feature-list__heading {
@@ -178,8 +171,11 @@
 
   .component-feature-list__item {
     margin-bottom: $gu-v-spacing / 2;
-    margin-left: 25px;
-    display:list-item;
+    display: list-item;
+
+    @include mq($from: leftCol) {
+      width: 200px;
+    }
   }
 
   .product-block__highlight {
