--- a/assets/components/directDebit/directDebitPopUpForm/directDebitPopUpForm.scss
+++ b/assets/components/directDebit/directDebitPopUpForm/directDebitPopUpForm.scss
@@ -74,10 +74,16 @@
   height: 40px;
   width: 40px;
   float: right;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .svg-cross {
-    height: 19px;
+
+  // buttons don't work as flex containers in all browsers
+  // https://github.com/philipwalton/flexbugs#9-some-html-elements-cant-be-flex-containers
+  span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .svg-cross {
+      height: 19px;
+    }
   }
 }
